# File_Generation_Agent

./: .env_template  .gitignore  README.md  main.py  pyproject.toml
docs/: FLOW_ARCHITECTURE.md  IMPLEMENTING_RENDERER_NODES.md  RENDERER_ARCHITECTURE.md
examples/: graph_integration_example.py
pdf_agent/: __main__.py  config.py  main.py  routes.py  session_store.py
pdf_agent/graph/: pdf_agent_graph.py  state.py
pdf_agent/nodes/: apply_edit.py  chat_response.py  classify_intent.py  generate_content.py  render_borb.py  render_fpdf2.py  render_markdown.py  render_pdf.py  render_weasy.py  select_renderer.py
pdf_agent/rendering/: chart_renderer.py  pdf_renderer.py
pdf_agent/schemas/: document_spec.py
pdf_agent/templates/: base.html  report_template.html
pdf_agent/utils/: file_utils.py  logger.py
