[project]
name = "file-generation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain-anthropic>=1.3.5",
    "langchain-core>=1.2.19",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "weasyprint>=68.1",
    # Renderer-specific dependencies
    "fpdf2>=2.8.3",
    "borb>=2.1.25",
    "markdown>=3.7",
    "Pillow>=10.0.0",
]
